Fix horizontal scroll in container

--- a/src/app/home/parts/container.component.scss
+++ b/src/app/home/parts/container.component.scss
@@ -7,9 +7,13 @@ div {
   vertical-align: top;
   outline: none;  
 }
+.container {
+  height:100%;
+  width:100%;  
+}
 
 .container-title {
-  height: 10%;
+  height: 15%;
   max-height: 30px;
   font-size: 10pt;
   padding-top: 3px;
@@ -27,10 +31,11 @@ div {
 }
 
 .container-body {  
-  height: 90%;
+  height: 85%;
   width: 100%;
   margin-right: 10px;
   border: 1px solid $gray;    
   overflow-y: scroll;
+  overflow-x: hidden;
 }
     
